Fix css for the titles of the "cards"
It got messed up when they became links a few commits ago.

--- a/fedoratagger/frontend/static/css/text.css
+++ b/fedoratagger/frontend/static/css/text.css
@@ -116,6 +116,21 @@ p,dl,hr,h1,h2,h3,h4,h5,h6,ol,ul,pre,table,address,fieldset {
 margin-bottom:20px
 }
 
+.card h2 a {
+    text-decoration: none;
+    color: black;
+    font-size: 25px;
+    -moz-border-radius: 10px;
+    border-radius: 10px;
+    padding-left: 7px;
+    padding-right: 7px;
+}
+
+.card h2 a:hover {
+    color:white;
+    background-color: #DB347A;
+}
+
 /* Generated by Font Squirrel (http://www.fontsquirrel.com) on August 2, 2010 02:12:44 PM America/New_York */
 
 @font-face {
